--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Discord bot for converting spotify/apple music links to youtube videos",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon -r dotenv/config ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,8 +18,10 @@
   },
   "homepage": "https://github.com/HarpreetBains94/discord-music-bot#readme",
   "dependencies": {
-    "discord.js": "^14.11.0",
-    "spotify-url-info": "^3.2.5",
-    "youtube-search-api": "^1.2.0"
+    "discord.js": "~14.11.0",
+    "dotenv": "^16.3.1",
+    "isomorphic-unfetch": "^4.0.2",
+    "spotify-url-info": "~3.2.5",
+    "youtube-search-api": "~1.2.0"
   }
 }
