--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
   "homepage": "https://github.com/HarpreetBains94/discord-music-bot#readme",
   "dependencies": {
     "@discordjs/rest": "~1.7.1",
+    "axios": "^1.4.0",
     "discord-api-types": "~0.37.48",
     "discord.js": "~14.11.0",
     "dotenv": "~16.3.1",
-    "isomorphic-unfetch": "~4.0.2",
-    "spotify-url-info": "~3.2.5",
     "youtube-search-api": "~1.2.0"
   }
 }
