--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "discord-api-types": "~0.37.48",
     "discord.js": "~14.11.0",
     "dotenv": "~16.3.1",
+    "pureimage": "^0.4.13",
+    "uuid": "^9.0.1",
     "youtube-search-api": "~1.2.0"
   }
 }
