--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Discord bot for converting spotify/apple music links to youtube videos",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r dotenv/config ./index.js",
+    "start": "pm2 start pm2.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
